Prevent timeline shuffle on mobile

--- a/cv/web/static/css/general.css
+++ b/cv/web/static/css/general.css
@@ -44,6 +44,8 @@
     display: table-cell;
     vertical-align: top;
     width: 43%;
+    word-break: break-word;
+    font-size: 85%;
 }
 
 .dropdown-item:active {
